# OpenEnv

./: pyproject.toml
examples/: echo_mcp_demo.py  test_mcp_integration.py
rfcs/: 004-reward-pipelines.md  RFC-003-implementation-journal.md
src/: pyproject.toml
src/core/: pyproject.toml
src/core/env_server/: __init__.py  http_server.py  mcp_environment.py  mcp_types.py
src/envs/echo_env/: __init__.py  client.py
src/envs/echo_env/server/: app.py  echo_environment.py  mcp_server.py
svg_rl_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  qwen_svg_rl.py  svg-rl-env-devmate-summary.md  test_ws.py
svg_rl_env/server/: Dockerfile  __init__.py  app.py  events.py  svg_rl_env_environment.py  training_manager.py
tests/core/mcp/: test_mcp.py
